Update docker-compose with new docker image

--- a/examples/java-jfr/rideshare/docker-compose.yml
+++ b/examples/java-jfr/rideshare/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       context: .
 
   pyroscope:
-    image: pyroscope/pyroscope:latest
+    image: rperry2174/pyroscope-java-tags:latest
     environment:
       - PYROSCOPE_LOG_LEVEL=debug
     ports:
